SERVER-39292 Do not evaluate failpoint  twice per operation when multiple options specified